# format-factory

./: .gitIgnore  CMakeLists.txt  README.md  main.cpp
libs/include/ffmpeg/libavcodec/: avcodec.h
libs/include/ffmpeg/libavutil/: log.h
src/: MainWindow.cpp  MainWindow.h
src/FFmpegDelegate/: FFmpegDelegate.cpp  FFmpegDelegate.h
